@@ -1,5 +1,6 @@
 Version 2.02.36 - 
 =================================
+  Remove unused struct in clvmd-openais, and use correct node count.
   Fix nodes list in clvmd-openais, and allow for broadcast messages.
   Exclude VG_GLOBAL from internal concurrent VG lock counter.
   Fix vgsplit internal counting of snapshot LVs.
